--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-#### File: index.html
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,10 +25,6 @@
     .navbar-custom {
       background-color: var(--nav-bg);
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .logo img {
-      max-width: 200px;
-      height: auto;
     }
     .message {
       border-bottom: 1px solid #ddd;
@@ -66,8 +60,8 @@
 
   <div class="container mt-4">
     <!-- Logo -->
-    <div class="logo text-center mb-4">
-      <img src="pyleaMUNfinallogo.png" alt="Logo">
+    <div class="text-center mb-4">
+      <img src="pyleaMUNfinallogo.png" alt="Logo" style="max-width:200px;">
     </div>
 
     <!-- Post Form -->
@@ -80,18 +74,18 @@
           <div class="mb-3">
             <textarea name="message" class="form-control" placeholder="Your message..." rows="3" required></textarea>
           </div>
-          <button type="submit" class="btn btn-primary w-100" style="background-color: var(--teal); border-color: var(--gold)">Post Message</button>
+          <button type="submit" class="btn w-100" style="background-color: var(--teal); color: #fff; border-color: var(--gold)">Post Message</button>
         </form>
       </div>
     </div>
 
     <!-- Messages -->
     <div id="wall">
-      <!-- Messages are injected here -->
+      <!-- messages appear here -->
     </div>
   </div>
 
-  <!-- Bootstrap JS bundle -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const form = document.getElementById('msgForm');
@@ -100,7 +94,7 @@
     async function fetchMessages() {
       const res = await fetch('/messages');
       const msgs = await res.json();
-      wall.innerHTML = msgs.map(m => 
+      wall.innerHTML = msgs.map(m =>
         `<div class="message">
            <div class="author">${m.author}</div>
            <div class="time">${new Date(m.time).toLocaleString()}</div>
@@ -124,65 +118,8 @@
       fetchMessages();
     });
 
+    // load messages on page load
     fetchMessages();
   </script>
 </body>
-```
-
-#### File: server.js
-```js
-const express = require('express');
-const sqlite3 = require('sqlite3').verbose();
-const path = require('path');
-
-const app = express();
-const db = new sqlite3.Database('messages.db');
-
-db.run(`
-  CREATE TABLE IF NOT EXISTS messages (
-    id INTEGER PRIMARY KEY AUTOINCREMENT,
-    author TEXT NOT NULL,
-    text TEXT NOT NULL,
-    time INTEGER NOT NULL
-  )
-`);
-
-app.use(express.json());
-app.use(express.static(path.join(__dirname, '.')));
-
-app.post('/messages', (req, res) => {
-  const { author, text } = req.body;
-  const time = Date.now();
-  db.run(`INSERT INTO messages (author, text, time) VALUES (?, ?, ?)`, [author, text, time], function(err) {
-    if (err) return res.status(500).json({ error: err.message });
-    res.status(201).json({ id: this.lastID });
-  });
-});
-
-app.get('/messages', (req, res) => {
-  db.all(`SELECT author, text, time FROM messages ORDER BY time DESC`, [], (err, rows) => {
-    if (err) return res.status(500).json({ error: err.message });
-    res.json(rows);
-  });
-});
-
-const PORT = process.env.PORT || 3000;
-app.listen(PORT, () => console.log(`Server listening on port ${PORT}`));
-```
-
-#### File: package.json
-```json
-{
-  "name": "message-wall",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.2"
-  }
-}
-```
-
+</html>
