--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Message Wall</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,27 +16,19 @@
       --cream: #f8f5ec;
     }
     body {
-      margin: 0;
-      padding-top: 56px;
+      margin: 0; padding-top: 56px;
       font-family: 'Lato', sans-serif;
-      background-color: var(--cream);
-      color: #333;
+      background-color: var(--cream); color: #333;
     }
     .navbar-custom {
       background-color: var(--nav-bg);
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .message {
-      border-bottom: 1px solid #ddd;
-      padding: 0.75rem 0;
+      border-bottom: 1px solid #ddd; padding: .75rem 0;
     }
-    .message .author {
-      font-weight: bold;
-    }
-    .message .time {
-      color: #888;
-      font-size: 0.85rem;
-    }
+    .message .author { font-weight: bold; }
+    .message .time { color: #888; font-size: .85rem; }
   </style>
 </head>
 <body>
@@ -50,11 +42,6 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="/">Wall</a></li>
-        </ul>
-      </div>
     </div>
   </nav>
 
@@ -69,57 +56,66 @@
       <div class="card-body">
         <form id="msgForm">
           <div class="mb-3">
-            <input type="text" name="author" class="form-control" placeholder="Your name" required />
+            <input type="text" id="author" class="form-control" placeholder="Your name" required/>
           </div>
           <div class="mb-3">
-            <textarea name="message" class="form-control" placeholder="Your message..." rows="3" required></textarea>
+            <textarea id="text" class="form-control" placeholder="Your message..." rows="3" required></textarea>
           </div>
-          <button type="submit" class="btn w-100" style="background-color: var(--teal); color: #fff; border-color: var(--gold)">Post Message</button>
+          <button type="submit" class="btn w-100" style="background-color: var(--teal); color:#fff; border-color:var(--gold)">
+            Post Message
+          </button>
         </form>
       </div>
     </div>
 
     <!-- Messages -->
-    <div id="wall">
-      <!-- messages appear here -->
-    </div>
+    <div id="wall"></div>
   </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
-    const form = document.getElementById('msgForm');
+    // TODO: Replace with your Firebase project config
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT.firebaseio.com",
+      projectId: "YOUR_PROJECT",
+      storageBucket: "YOUR_PROJECT.appspot.com",
+      messagingSenderId: "SENDER_ID",
+      appId: "APP_ID"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database().ref('messages');
+
     const wall = document.getElementById('wall');
+    const form = document.getElementById('msgForm');
 
-    async function fetchMessages() {
-      const res = await fetch('/messages');
-      const msgs = await res.json();
-      wall.innerHTML = msgs.map(m =>
-        `<div class="message">
-           <div class="author">${m.author}</div>
-           <div class="time">${new Date(m.time).toLocaleString()}</div>
-           <div class="text">${m.text}</div>
-         </div>`
-      ).join('');
-    }
-
-    form.addEventListener('submit', async e => {
-      e.preventDefault();
-      const data = new FormData(form);
-      await fetch('/messages', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          author: data.get('author'),
-          text: data.get('message')
-        })
-      });
-      form.reset();
-      fetchMessages();
+    // Listen for new messages & render
+    db.orderByChild('time').on('value', snapshot => {
+      const msgs = snapshot.val() || {};
+      const list = Object.values(msgs).sort((a,b)=>b.time - a.time);
+      wall.innerHTML = list.map(m=>`
+        <div class="message">
+          <div class="author">${m.author}</div>
+          <div class="time">${new Date(m.time).toLocaleString()}</div>
+          <div class="text">${m.text}</div>
+        </div>
+      `).join('');
     });
 
-    // load messages on page load
-    fetchMessages();
+    // Post new message
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      const author = document.getElementById('author').value.trim();
+      const text   = document.getElementById('text').value.trim();
+      if (!author || !text) return;
+      db.push({ author, text, time: Date.now() });
+      form.reset();
+    });
   </script>
 </body>
 </html>
