--- a/index.html
+++ b/index.html
@@ -79,15 +79,24 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
     // TODO: Replace with your Firebase project config
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT.firebaseio.com",
-      projectId: "YOUR_PROJECT",
-      storageBucket: "YOUR_PROJECT.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
-    };
+   // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+const firebaseConfig = {
+  apiKey: "AIzaSyCVyyhYuqay-Zd4DPyEJ4OVw51FCGr-wJo",
+  authDomain: "message-wall2026.firebaseapp.com",
+  databaseURL: "https://message-wall2026-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-wall2026",
+  storageBucket: "message-wall2026.firebasestorage.app",
+  messagingSenderId: "261216285703",
+  appId: "1:261216285703:web:2099c5d7854e05259966a2"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database().ref('messages');
 
