--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </style>
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="/">
@@ -42,10 +43,12 @@
   </nav>
 
   <div class="container mt-4">
+    <!-- Logo -->
     <div class="text-center mb-4">
       <img src="pyleaMUNfinallogo.png" alt="Logo" style="max-width:200px;">
     </div>
 
+    <!-- Post Form -->
     <div class="card mb-4">
       <div class="card-body">
         <form id="msgForm">
@@ -58,36 +61,36 @@
       </div>
     </div>
 
+    <!-- Messages -->
     <div id="wall"></div>
   </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Firebase SDKs -->
+  <!-- Firebase SDKs (compat) -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
-    // 1. Paste your actual config object here:
-const firebaseConfig = {
-  apiKey: "AIzaSyCVyyhYuqay-Zd4DPyEJ4OVw51FCGr-wJo",
-  authDomain: "message-wall2026.firebaseapp.com",
-  databaseURL: "https://message-wall2026-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "message-wall2026",
-  storageBucket: "message-wall2026.firebasestorage.app",
-  messagingSenderId: "261216285703",
-  appId: "1:261216285703:web:2099c5d7854e05259966a2"
-};
+    // Your Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCVyyhYuqay-Zd4DPyEJ4OVw51FCGr-wJo",
+      authDomain: "message-wall2026.firebaseapp.com",
+      databaseURL: "https://message-wall2026-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "message-wall2026",
+      storageBucket: "message-wall2026.firebasestorage.app",
+      messagingSenderId: "261216285703",
+      appId: "1:261216285703:web:2099c5d7854e05259966a2"
+    };
 
-    // 2. Initialize Firebase
-    console.log("Initializing Firebase…");
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database().ref('messages');
 
-    // 3. Grab DOM elements
+    // DOM elements
     const form = document.getElementById('msgForm');
     const wall = document.getElementById('wall');
 
-    // 4. Fetch & render messages
+    // Render messages
     function render(messages) {
       wall.innerHTML = messages.map(m => `
         <div class="message">
@@ -98,35 +101,22 @@ const firebaseConfig = {
       `).join('');
     }
 
-    function fetchMessages() {
-      console.log("Listening for new messages…");
-      db.orderByChild('time').on('value', snapshot => {
-        const data = snapshot.val();
-        console.log("Data received:", data);
-        const list = data
-          ? Object.values(data).sort((a,b) => b.time - a.time)
-          : [];
-        render(list);
-      }, err => {
-        console.error("Error reading messages:", err);
-      });
-    }
+    // Listen for new messages
+    db.orderByChild('time').on('value', snapshot => {
+      const data = snapshot.val();
+      const list = data ? Object.values(data).sort((a,b) => b.time - a.time) : [];
+      render(list);
+    });
 
-    // 5. Handle form submission
+    // Post new message
     form.addEventListener('submit', e => {
       e.preventDefault();
       const author = document.getElementById('author').value.trim();
-      const text = document.getElementById('text').value.trim();
-      console.log("Posting:", { author, text });
+      const text   = document.getElementById('text').value.trim();
       if (!author || !text) return;
-      db.push({ author, text, time: Date.now() })
-        .then(() => console.log("Post successful"))
-        .catch(err => console.error("Post error:", err));
+      db.push({ author, text, time: Date.now() });
       form.reset();
     });
-
-    // 6. Kick it off
-    fetchMessages();
   </script>
 </body>
 </html>
