--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         <img src="pyleaMUNfinallogo1.png" alt="Logo" style="height:40px;" class="me-2">
         MessageWall
       </a>
+      <!-- Home button -->
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="https://pyleamun.github.io/pyleamun2026/" target="_blank" rel="noopener noreferrer">
+            Home
+          </a>
+        </li>
+      </ul>
     </div>
   </nav>
 
